fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(17, 6, 28) !important;
-  overflow: hidden;
 }
 
 code {
